# xid-ex

./: .gitignore  CHANGELOG.md  README.md  checksum-Elixir.Xid.exs  mix.exs
.github/workflows/: release.yml
config/: config.exs
lib/: xid.ex
native/xid/: Cargo.toml  README.md
native/xid/src/: lib.rs
native/xid_nif/: Cargo.toml  README.md
native/xid_nif/src/: lib.rs
test/: xid_test.exs
